Try to fix burger-menu rendering on iPhone5

--- a/app/styles/_burger-menu.scss
+++ b/app/styles/_burger-menu.scss
@@ -23,7 +23,7 @@
     z-index: 1000;
     transition: left .2s ease-out;
     position: fixed;
-    padding: 34px 25px 40px 25px;
+    padding: 0 25px;
     height: calc(var(--vh, 1vh) * 100);
     overflow: hidden;
 
